Avoid use docker bin on host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,11 @@ version: '3'
 services:
   jenkins:
     build: .
-
     ports:
-      - ${JENKINS_PORT}:8080
-      - 50000:50000
+      - "${JENKINS_PORT}:8080"
+      - "50000:50000"
     volumes:
       - jenkins_home:/var/jenkins_home
-      - ${DOCKER_BIN}:/usr/bin/docker
     environment:
       - DOCKER_HOST=tcp://socat:2375
     restart: always
@@ -19,8 +17,6 @@ services:
     command: TCP4-LISTEN:2375,fork,reuseaddr UNIX-CONNECT:/var/run/docker.sock
     volumes:
         - /var/run/docker.sock:/var/run/docker.sock
-    expose:
-        - "2375"
 
 volumes:
   jenkins_home:
